--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocina En Guadalajara</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/swagger-ui.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/swagger-ui.css">
   <!-- Cargar Mermaid primero -->
-  <script src="/js/mermaid.min.js"></script>
-  <script src="/js/marked.min.js"></script>
-  <script src="/js/swagger-ui-bundle.js" defer></script>
-  <script src="/js/swagger-ui-standalone-preset.js" defer></script>
-  <script src="/js/sweetalert2@11.js" defer></script>
-  <script src="/js/app.js" defer></script>
+  <script src="js/mermaid.min.js"></script>
+  <script src="js/marked.min.js"></script>
+  <script src="js/swagger-ui-bundle.js" defer></script>
+  <script src="js/swagger-ui-standalone-preset.js" defer></script>
+  <script src="js/sweetalert2@11.js" defer></script>
+  <script src="js/app.js" defer></script>
 
 </head>
 
