--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/swagger-ui.css">
   <!-- Cargar Mermaid primero -->
-  <script src="js/mermaid.min.js"></script>
-  <script src="js/marked.min.js"></script>
-  <script src="js/sweetalert2@11.js" defer></script>
-  <script src="js/app.js" defer></script>
+  <script src="/blog-recetas-guadalajara/js/mermaid.min.js"></script>
+  <script src="/blog-recetas-guadalajara/js/marked.min.js"></script>
+  <script src="/blog-recetas-guadalajara/js/sweetalert2@11.js" defer></script>
+  <script src="/blog-recetas-guadalajara/js/app.js" defer></script>
 
 </head>
 
