--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   <div class="container">
     <nav class="navbar">
       <div class="navbar-brand">
-        <a href="/blog-recetas-guadalajara/" data-page="recetas">
+        <a href="/" data-page="recetas">
           <!--<img src="https://www.tsmart-tellink.com/static/media/tellink1920.72200e0acf7696d16706.png" alt="Tellink" class="navbar-logo">-->
           TSmarT <small>Docs</small>
         </a>
