--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar-brand">
-        <a href="/blog-recetas-guadalajara/" data-page="recetas">
+        <a href="/" data-page="recetas">
           <!--<img src="https://www.tsmart-tellink.com/static/media/tellink1920.72200e0acf7696d16706.png" alt="Tellink" class="navbar-logo">-->
           <small>Cocina En</small> Guadalajara
         </a>
@@ -34,7 +34,7 @@
         </button>
       </div>
       <ul class="navbar-nav">
-        <li><a href="/blog-recetas-guadalajara/" data-page="historias">Historias</a></li>
+        <li><a href="/" data-page="historias">Historias</a></li>
         
         <!--<li><a href="/" data-page="diagramas">Diagramas</a></li>-->
         <!--<li class="dropdown">
@@ -55,7 +55,7 @@
     // Cargar la primera página al inicio
     document.addEventListener( 'DOMContentLoaded', () =>
     {
-      loadPage( 'pagina1' );
+      loadPage( 'recetas' );
 
       // Manejar clic en los enlaces del navbar
       document.querySelectorAll( '.navbar-nav a' ).forEach( link =>
@@ -75,7 +75,7 @@
         if ( e.state && e.state.page ) {
           loadPage( e.state.page );
         } else {
-          loadPage( 'pagina1' );
+          loadPage( 'recetas' );
         }
       } );
     } );
